[metadata]
name = medisynth
version = 0.0.1
author = Harvey Mannering and Miguel Xochicale
author_email = your@email.address
url = https://github.com/mxochicale/medisynth
description = Ultrasound Fetal Brain Imaging Synthesis
long_description = file: README.md
long_description_content_type = text/markdown
license=MIT
keywords = artificial intelligence, diffusion models
classifiers=
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Topic :: Scientific/Engineering :: Artificial Intelligence
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.8


[options]
packages = find:
install_requires=
	torch
	notebook
	pandas
	scikit-image

[options.packages.find]
include=mediynth
exclude=data, dependencies, event, examples, references, slides
